# AI-Agent-Backend-Playground

./: README.md
docs/: architecture.md
langgraph/: graph.py
python_ai/: app.py  rag_pipeline.py  requirements.txt
python_ai/chroma_db/: chroma.sqlite3
rust_api/: Cargo.toml
rust_api/src/: main.rs
scripts/: run_python.sh  run_rust.sh
