[package]
name = "edgelink_rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = { version = "9", optional = true }
reqwest = { version = "0.12", features = ["json"] }

[features]
# Enable JWT authentication when the `jwt` feature is used.
jwt = ["jsonwebtoken"]

[[bin]]
name = "edgelink_rust_api"
path = "src/main.rs"
